k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  type: NodePort
  ports:
  - port: 4499
    targetPort: 4499
    nodePort: 30099
    protocol: TCP
    name: http
  selector:
    app: wisecow
